fixed navbar on mobile with new style, updated video width

--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -163,7 +163,7 @@ img.gridImg
 video
 {
   margin: auto;
-  width: 55vw;
+  width: 90%;
 }
 
 video.double
